--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title> REDUR NE ZAMAN YAKIŞIKLI OLACAK </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>REDUR NE ZAMAN YAKIŞIKLI OLACAK</title>
 </head>
-
 <body>
-    <script>
+<script>
         var redurunYasi = prompt ("Yaşınızı giriniz")
 
 if (redurunYasi >= 20 && redurunYasi <=79 ) {
@@ -20,7 +22,6 @@ else if (redurunYasi==80) {
 else {
 	document.write("Redur bey, öldün")
 }
-
     </script>
 </body>
 </html>
