--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <script>
+
+var redurunYasi = prompt ("Yaşınızı giriniz")
+
 if (redurunYasi =="") {
     document.write("Lütfen bir yaş giriniz")
 }
